# jaxbt

./: README.md  pyproject.toml
.github/workflows/: test.yml
_build/: .buildinfo  genindex.html  index.html  jaxbt.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree  jaxbt.doctree  modules.doctree
_build/_sources/: index.md.txt  index.rst.txt  jaxbt.rst.txt  modules.rst.txt
docs/: conf.py
jaxbt/: backtest.py
notebook/: binance.ipynb
tests/: test_backtest.py
