[tool.poetry]
name = "jax-backtest"
version = "0.1.0"
description = ""
authors = ["richwomanbtc <richwomanbtc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.2"
numpy = "^1.23.5"
jaxlib = "^0.4.1"
scipy = "^1.10.0"
jax = "^0.4.3"
jaxopt = "^0.6"
plotly = "^5.13.0"
ccxt = "^2.7.94"
polars = "^0.16.4"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = {version = "^22.12.0", allow-prereleases = true}
ipykernel = "^6.21.2"
pytest-cov = "^4.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
